# eagm-odoo

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
config/: odoo.conf
customs_addons/abs_default_product_by_customer/: __manifest__.py
customs_addons/abs_invoice_outstanding_report/: __init__.py  __manifest__.py
customs_addons/ak_sale_order_excel_report/: README.txt  __manifest__.py
customs_addons/bi_manual_currency_exchange_rate/: Readme  __manifest__.py
customs_addons/bi_multiwarehouse_for_sales/: README  __manifest__.py
customs_addons/customer_product_code/: __manifest__.py
customs_addons/eagm_custom_addons/: __manifest__.py
customs_addons/eagm_custom_css/: __manifest__.py
customs_addons/eagm_custom_reports/: __manifest__.py
customs_addons/eagm_invoice/: __manifest__.py
customs_addons/eagm_sale_order/: __manifest__.py
customs_addons/eagm_sale_order_line_update_qty/: __manifest__.py  partner.xml
customs_addons/eagm_stock_inventory_line/: __manifest__.py
customs_addons/employee_evaluation_management/: __manifest__.py
customs_addons/face_attendance_odoo-master/: __manifest__.py
customs_addons/ke_hr_payroll/: __manifest__.py
customs_addons/ks_rma/: __manifest__.py
customs_addons/ks_sales_forecast/: __init__.py  __manifest__.py  requirements.txt
customs_addons/l10n_ke_invoice_cu/: __manifest__.py
customs_addons/l10n_tz_invoice_vfd/: __manifest__.py
customs_addons/l10n_ug_invoice/: __manifest__.py  readme.md
customs_addons/mai_product_pricelist_dynamic_listview/: __manifest__.py
(+562 files in other folders)
