[tool.poetry]
name = "showheroes-odoo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.3.4"
google-cloud-storage = "^2.5.0"
cachetools = "^5.2.0"
dicttoxml = "^1.7.16"
ics = "^0.7.2"
sentry-sdk = "^1.10.1"
pyopenssl = "^23.0.0"
urllib3 = "^1.26.14"
fintech = "7.2.10"
cryptography = "^39.0.1"

[tool.poetry.dev-dependencies]
docker-compose = "^1.29.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
